--- a/about.html
+++ b/about.html
@@ -186,180 +186,21 @@
             </div>
             <!--Grid row-->
 
-            <h6 class="font-weight-bold text-center grey-text text-uppercase small mb-4">Team</h6>
             <!-- Section heading -->
-            <h2 class=" text-center dark-grey-text pb-2">Our Team</h2>
-            <hr class="w-header my-4">
+            <h3 class="font-weight-bold pb-2 mb-4">Our team</h3>
             <!-- Section description -->
-            <p class="lead text-center text-muted pt-2 mb-5">Enim ad minim exercitation ullamco laboris nisi ut ex aliquip.</p>
+            <p class="text-muted w-responsive mx-auto mb-5">knows a little more about us, what we like to do and what we do.</p>
 
-            <!-- Grid row -->
-            <div class="row text-center dark-grey-text my-5">
-
-              <!-- Grid column -->
-              <div class="col-md-4 mb-4">
-
-                <div class="mx-auto">
-                  <img src="/img/team/german-perez.jpg" class="img-fluid rounded mx-auto" alt="photo-g">
-                </div>
-                <div class="mini-avatar mx-auto">
-                  <img src="/img/brand/soufun-solid-logo.png" class="img-fluid rounded-circle mx-auto" alt="smaple image">
-                </div>
-                <div class="text-center px-2">
-                  <h6 class="font-weight-bold">German Perez</h6>
-                  <small class="text-muted">SouFUN Co-funder</small>
-                  <p class="mt-3 text-muted">Passionate about languages ​​and also
-                    programming languages. My strengths are
-                    Unity, Blender and Substance Painter, java
-                    and python. Programming is an art in which
-                    the limit is your imagination.</p>
-                  <ul class="list-unstyled social-icon d-flex justify-content-center mt-3 mb-0 cyan-text">
-                    <li><a href="https://twitter.com/kodokushinku" target="_blank"><i class="fab fa-twitter mx-2"></i></a></li>
-                    <li><a href="https://www.facebook.com/gerdav2926?ref=bookmarks" target="_blank"><i class="fab fa-facebook-f mx-2"></i></a></li>
-                    <li><a href="https://www.instagram.com/ger_dav/" target="_blank"><i class="fab fa-instagram mx-2"></i></a></li>
-                    <li><a href="https://github.com/Kodoku-Shinku" target="_blank"><i class="fab fa-github mx-2"></i></a></li>
-                  </ul>
-                </div>
-
-              </div>
-              <!-- Grid column -->
-
-              <!-- Grid column -->
-              <div class="col-md-4 mb-4">
-
-                <div class="mx-auto">
-                  <img src="/img/team/roberto-torres.jpg" class="img-fluid rounded mx-auto" alt="photo-r">
-                </div>
-                <div class="mini-avatar mx-auto">
-                  <img src="/img/brand/soufun-solid-logo.png" class="img-fluid rounded-circle mx-auto" alt="smaple image">
-                </div>
-                <div class="text-center px-2">
-                  <h6 class="font-weight-bold">Roberto Torres</h6>
-                  <small class="text-muted">SouFUN Co-funder</small>
-                  <p class="mt-3 text-muted">Game Developer, program
-                    whatever it takes to
-                    create amazing things.
-                    I'm good at Unity 3D,
-                    Java, Python.</p>
-                  <ul class="list-unstyled social-icon d-flex justify-content-center mt-3 mb-0 cyan-text">
-                    <li><a href="https://twitter.com/kodokushinku" target="_blank"><i class="fab fa-twitter mx-2"></i></a></li>
-                    <li><a href="https://www.facebook.com/gerdav2926?ref=bookmarks" target="_blank"><i class="fab fa-facebook-f mx-2"></i></a></li>
-                    <li><a href="https://www.instagram.com/ger_dav/" target="_blank"><i class="fab fa-instagram mx-2"></i></a></li>
-                    <li><a href="https://github.com/Kodoku-Shinku" target="_blank"><i class="fab fa-github mx-2"></i></a></li>
-                  </ul>
-                </div>
-
-              </div>
-              <!-- Grid column -->
-
-              <!-- Grid column -->
-              <div class="col-md-4 mb-4">
-
-                <div class="mx-auto">
-                  <img src="/img/team/eli-roots.jpg" class="img-fluid rounded mx-auto" alt="photo-e">
-                </div>
-                <div class="mini-avatar mx-auto">
-                  <img src="/img/brand/soufun-solid-logo.png" class="img-fluid rounded-circle mx-auto" alt="smaple image">
-                </div>
-                <div class="text-center px-2">
-                  <h6 class="font-weight-bold">Elizabeth Librado</h6>
-                  <small class="text-muted">SouFUN Co-Founder</small>
-                  <p class="mt-3 text-muted">My favorite programs are Photoshop,
-                    2D Tupi, Paintool Sai and After Effects.
-                    I love Kirby and Crash animation and games,
-                    love reading science fiction and I am in love
-                    with music in vinyl format.
-                  </p>
-                  <ul class="list-unstyled social-icon d-flex justify-content-center mt-3 mb-0 cyan-text">
-                    <li><a href="https://www.instagram.com/ellisroots/" target="_blank"><i class="fab fa-instagram mx-2 ml-3">ellisroots</i></a></li>
-                    <li><a href="https://www.instagram.com/ilaxolotl/" target="_blank"><i class="fab fa-instagram mx-2 ml-3">ilaxolotl</i></a></li>
-                  </ul>
-                </div>
-              </div>
-              <!-- Grid column -->
-            </div>
-            <!-- Grid row -->
-
-            <!-- Grid row -->
-            <div class="row d-flex justify-content-center text-center dark-grey-text my-5">
-
-              <!-- Grid column -->
-              <div class="col-md-4 mb-4">
-
-                <div class="mx-auto">
-                  <img src="/img/team/keyla-avila.jpg" class="img-fluid rounded mx-auto" alt="photo-k">
-                </div>
-                <div class="mini-avatar mx-auto">
-                  <img src="/img/brand/soufun-solid-logo.png" class="img-fluid rounded-circle mx-auto" alt="smaple image">
-                </div>
-                <div class="text-center px-2">
-                  <h6 class="font-weight-bold">Keyla Ávila</h6>
-                  <small class="text-muted">SouFUN Graphic designer and illustrator</small>
-                  <p class="mt-3 text-muted">I like to give Photoshop,
-                    Illustrator, InDesign, Blender,
-                    Krita and CCS. Fascinated by
-                    Art Concep, always
-                    willing to learn.</p>
-                  <ul class="list-unstyled social-icon d-flex justify-content-center mt-3 mb-0 cyan-text">
-                    <li><a href="https://www.instagram.com/pildoritakey/" target="_blank"><i class="fab fa-instagram mx-2"></i></a></li>
-                  </ul>
-                </div>
-
-              </div>
-              <!-- Grid column -->
-
-              <!-- Grid column -->
-              <div class="col-md-4 mb-4">
-
-                <div class="mx-auto">
-                  <img src="/img/team/victor-sarabia.jpg" class="img-fluid rounded mx-auto" alt="photo-v">
-                </div>
-                <div class="mini-avatar mx-auto">
-                  <img src="/img/brand/soufun-solid-logo.png" class="img-fluid rounded-circle mx-auto" alt="smaple image">
-                </div>
-                <div class="text-center px-2">
-                  <h6 class="font-weight-bold">Victor Sarabia</h6>
-                  <small class="text-muted">SouFUN Multimedia designer</small>
-                  <p class="mt-3 text-muted">I move better in Photoshop,
-                    Illustrator and After Effects.
-                    My specialty is Photo Editing. Lover
-                    of the universe, I enjoy sports, nature,
-                    books and waste hours playing a good shooter.</p>
-                  <ul class="list-unstyled social-icon d-flex justify-content-center mt-3 mb-0 cyan-text">
-                    <li><a href="https://www.instagram.com/sarabia_design/" target="_blank"><i class="fab fa-instagram mx-2"></i></a></li>
-                  </ul>
-                </div>
-
-              </div>
-              <!-- Grid column -->
-            </div>
-            <!-- Grid row -->
           </div>
           <!--Card-->
         </section>
         <!--Section: Content-->
 
-
-
-
-
-
-
-
-
-
+        <!--Container Team-->
         <div class="container my-5">
 
-
-          <!--Section: Content-->
+          <!--Section: Team-->
           <section class="text-center dark-grey-text" id="team">
-
-            <!-- Section heading -->
-            <h3 class="font-weight-bold pb-2 mb-4">Our amazing team</h3>
-            <!-- Section description -->
-            <p class="text-muted w-responsive mx-auto mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              Fugit, error amet numquam iure provident voluptate esse quasi, veritatis totam voluptas nostrum quisquam
-              eum porro a pariatur veniam.</p>
 
             <!-- Grid row -->
             <div class="row d-flex justify-content-center">
@@ -708,9 +549,9 @@
             <!-- Grid row -->
 
           </section>
-          <!--Section: Content-->
+          <!--Section: Team-->
         </div>
-
+        <!--Container Team-->
 
 
 
