--- a/frontend/info/faqs.html
+++ b/frontend/info/faqs.html
@@ -166,18 +166,18 @@
     <!--Main container-->
     <div class="container-fluid">
       <!--Container FAQs-->
-      <div class="container mt-5 elegant-color-dark">
+      <div class="container my-5 elegant-color-dark">
         <!--Section: FAQs-->
         <section>
 
-          <h6 class="font-weight-normal text-uppercase font-small white-text mb-4 text-center">FAQ</h6>
+          <h6 class="font-weight-normal text-uppercase font-small white-text mb-4 pt-5 text-center">FAQ</h6>
           <!-- Section heading -->
           <h3 class="font-weight-bold white-text mb-4 pb-2 text-center">Frequently Asked Questions</h3>
           <hr class="w-header">
           <!-- Section description -->
           <p class="lead white-text-50 mx-auto mt-4 pt-2 mb-5 text-center">Got a question? We've got answers. If you have some other questions, see our support center.</p>
           <!-- FAQs row -->
-          <div class="row">
+          <div class="row elegant-color-dark">
             <!-- FAQs column -->
             <div class="col-md-12 col-lg-10 mx-auto mb-5">
 
@@ -188,7 +188,7 @@
                 <div class="card border-top border-bottom-0 border-left border-right border-light">
 
                   <!-- Card header -->
-                  <div class="card-header border-bottom border-light" role="tab" id="headingOne1">
+                  <div class="card-header border-bottom z-depth-1 border-light" role="tab" id="headingOne1">
                     <a data-toggle="collapse" data-parent="#accordionEx" href="#collapseOne1" aria-expanded="true" aria-controls="collapseOne1">
                       <h5 class="white-text font-weight-normal mb-0">
                         Is this a secure site for purchases? <i class="fas fa-angle-down rotate-icon white-text"></i>
@@ -198,7 +198,7 @@
 
                   <!-- Card body -->
                   <div id="collapseOne1" class="collapse show" role="tabpanel" aria-labelledby="headingOne1" data-parent="#accordionEx">
-                    <div class="card-body white-text">
+                    <div class="card-body elegant-color white-text">
                       Absolutely! We work with top payment companies which guarantees your safety and security. All billing information is stored on our payment processing partner which has the most stringent level of certification available in the
                       payments industry.
                     </div>
