--- a/frontend/info/faqs.html
+++ b/frontend/info/faqs.html
@@ -177,7 +177,7 @@
           <!-- Section description -->
           <p class="lead white-text-50 mx-auto mt-4 pt-2 mb-5 text-center">Got a question? We've got answers. If you have some other questions, see our support center.</p>
           <!-- FAQs row -->
-          <div class="row elegant-color-dark">
+          <div class="row accordion-gradient-bg">
             <!-- FAQs column -->
             <div class="col-md-12 col-lg-10 mx-auto mb-5">
 
@@ -185,10 +185,10 @@
               <div class="accordion md-accordion" id="accordionEx" role="tablist" aria-multiselectable="true">
 
                 <!-- Accordion card -->
-                <div class="card border-top border-bottom-0 border-left border-right border-light">
+                <div class="card">
 
                   <!-- Card header -->
-                  <div class="card-header border-bottom z-depth-1 elegant-color border-light" role="tab" id="headingOne1">
+                  <div class="card-header rgba-stylish-strong z-depth-1 mb-1" role="tab" id="headingOne1">
                     <a data-toggle="collapse" data-parent="#accordionEx" href="#collapseOne1" aria-expanded="true" aria-controls="collapseOne1">
                       <h5 class="white-text font-weight-normal mb-0">
                         Is this a secure site for purchases? <i class="fas fa-angle-down rotate-icon white-text"></i>
@@ -198,7 +198,7 @@
 
                   <!-- Card body -->
                   <div id="collapseOne1" class="collapse show" role="tabpanel" aria-labelledby="headingOne1" data-parent="#accordionEx">
-                    <div class="card-body elegant-color white-text">
+                    <div class="card-body mb-1 rgba-grey-light white-text">
                       Absolutely! We work with top payment companies which guarantees your safety and security. All billing information is stored on our payment processing partner which has the most stringent level of certification available in the
                       payments industry.
                     </div>
@@ -208,10 +208,10 @@
                 <!-- Accordion card -->
 
                 <!-- Accordion card -->
-                <div class="card border-bottom-0 border-left border-right border-light">
+                <div class="card">
 
                   <!-- Card header -->
-                  <div class="card-header border-bottom z-depth-1 elegant-color border-light" role="tab" id="headingTwo2">
+                  <div class="card-header rgba-stylish-strong z-depth-1 mb-1" role="tab" id="headingTwo2">
                     <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx" href="#collapseTwo2" aria-expanded="false" aria-controls="collapseTwo2">
                       <h5 class="white-text font-weight-normal mb-0">
                         How long are your contracts? <i class="fas fa-angle-down rotate-icon white-text"></i>
@@ -221,7 +221,7 @@
 
                   <!-- Card body -->
                   <div id="collapseTwo2" class="collapse" role="tabpanel" aria-labelledby="headingTwo2" data-parent="#accordionEx">
-                    <div class="card-body elegant-color white-text">
+                    <div class="card-body mb-1 rgba-grey-light white-text">
                       Currently, we only offer monthly subscription. You can upgrade or cancel your monthly account at any time with no further obligation.
                     </div>
                   </div>
@@ -230,10 +230,10 @@
                 <!-- Accordion card -->
 
                 <!-- Accordion card -->
-                <div class="card border-bottom-0 border-left border-right border-light">
+                <div class="card">
 
                   <!-- Card header -->
-                  <div class="card-header border-bottom z-depth-1 elegant-color border-light" role="tab" id="headingThree3">
+                  <div class="card-header rgba-stylish-strong z-depth-1 mb-1" role="tab" id="headingThree3">
                     <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx" href="#collapseThree3" aria-expanded="false" aria-controls="collapseThree3">
                       <h5 class="white-text font-weight-normal mb-0">
                         Can I cancel my subscription? <i class="fas fa-angle-down rotate-icon white-text"></i>
@@ -243,7 +243,7 @@
 
                   <!-- Card body -->
                   <div id="collapseThree3" class="collapse" role="tabpanel" aria-labelledby="headingThree3" data-parent="#accordionEx">
-                    <div class="card-body elegant-color white-text">
+                    <div class="card-body mb-1 rgba-grey-light white-text">
                       You can cancel your subscription anytime in your account. Once the subscription is cancelled, you will not be charged next month. You will continue to have access to your account until your current subscription expires.
                     </div>
                   </div>
@@ -252,10 +252,10 @@
                 <!-- Accordion card -->
 
                 <!-- Accordion card -->
-                <div class="card border-left border-right border-light">
+                <div class="card">
 
                   <!-- Card header -->
-                  <div class="card-header border-bottom z-depth-1 border-light teal lighten-2" role="tab" id="headingThree4">
+                  <div class="card-header rgba-stylish-strong z-depth-1 mb-1" role="tab" id="headingThree4">
                     <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx" href="#collapseThree4" aria-expanded="false" aria-controls="collapseThree4">
                       <h5 class="white-text font-weight-normal mb-0">
                         Can I request refund? <i class="fas fa-angle-down rotate-icon white-text"></i>
@@ -265,7 +265,7 @@
 
                   <!-- Card body -->
                   <div id="collapseThree4" class="collapse" role="tabpanel" aria-labelledby="headingThree4" data-parent="#accordionEx">
-                    <div class="card-body white-text rgba-grey-light cyan darken-3">
+                    <div class="card-body mb-1 rgba-grey-light white-text">
                       Unfortunately, not. We do not issue full or partial refunds for any reason.
                     </div>
                   </div>
