--- a/frontend/info/faqs.html
+++ b/frontend/info/faqs.html
@@ -188,7 +188,7 @@
                 <div class="card border-top border-bottom-0 border-left border-right border-light">
 
                   <!-- Card header -->
-                  <div class="card-header border-bottom z-depth-1 elegant-color border-light" role="tab" id="headingOne1">
+                  <div class="card-header border-bottom z-depth-1 teal lighten-2 border-light" role="tab" id="headingOne1">
                     <a data-toggle="collapse" data-parent="#accordionEx" href="#collapseOne1" aria-expanded="true" aria-controls="collapseOne1">
                       <h5 class="white-text font-weight-normal mb-0">
                         Is this a secure site for purchases? <i class="fas fa-angle-down rotate-icon white-text"></i>
@@ -198,7 +198,7 @@
 
                   <!-- Card body -->
                   <div id="collapseOne1" class="collapse show" role="tabpanel" aria-labelledby="headingOne1" data-parent="#accordionEx">
-                    <div class="card-body elegant-color white-text">
+                    <div class="card-body teal lighten-3 white-text">
                       Absolutely! We work with top payment companies which guarantees your safety and security. All billing information is stored on our payment processing partner which has the most stringent level of certification available in the
                       payments industry.
                     </div>
@@ -211,7 +211,7 @@
                 <div class="card border-bottom-0 border-left border-right border-light">
 
                   <!-- Card header -->
-                  <div class="card-header border-bottom z-depth-1 elegant-color border-light" role="tab" id="headingTwo2">
+                  <div class="card-header border-bottom z-depth-1 teal lighten-2 border-light" role="tab" id="headingTwo2">
                     <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx" href="#collapseTwo2" aria-expanded="false" aria-controls="collapseTwo2">
                       <h5 class="white-text font-weight-normal mb-0">
                         How long are your contracts? <i class="fas fa-angle-down rotate-icon white-text"></i>
@@ -221,7 +221,7 @@
 
                   <!-- Card body -->
                   <div id="collapseTwo2" class="collapse" role="tabpanel" aria-labelledby="headingTwo2" data-parent="#accordionEx">
-                    <div class="card-body elegant-color white-text">
+                    <div class="card-body teal lighten-3 white-text">
                       Currently, we only offer monthly subscription. You can upgrade or cancel your monthly account at any time with no further obligation.
                     </div>
                   </div>
@@ -233,7 +233,7 @@
                 <div class="card border-bottom-0 border-left border-right border-light">
 
                   <!-- Card header -->
-                  <div class="card-header border-bottom z-depth-1 elegant-color border-light" role="tab" id="headingThree3">
+                  <div class="card-header border-bottom z-depth-1 teal lighten-2 border-light" role="tab" id="headingThree3">
                     <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx" href="#collapseThree3" aria-expanded="false" aria-controls="collapseThree3">
                       <h5 class="white-text font-weight-normal mb-0">
                         Can I cancel my subscription? <i class="fas fa-angle-down rotate-icon white-text"></i>
@@ -243,7 +243,7 @@
 
                   <!-- Card body -->
                   <div id="collapseThree3" class="collapse" role="tabpanel" aria-labelledby="headingThree3" data-parent="#accordionEx">
-                    <div class="card-body elegant-color white-text">
+                    <div class="card-body teal lighten-3 white-text">
                       You can cancel your subscription anytime in your account. Once the subscription is cancelled, you will not be charged next month. You will continue to have access to your account until your current subscription expires.
                     </div>
                   </div>
@@ -255,7 +255,7 @@
                 <div class="card border-left border-right border-light">
 
                   <!-- Card header -->
-                  <div class="card-header border-bottom z-depth-1 elegant-color border-light" role="tab" id="headingFour4">
+                  <div class="card-header border-bottom z-depth-1 teal lighten-2 border-light" role="tab" id="headingFour4">
                     <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx" href="#collapseFour4" aria-expanded="false" aria-controls="collapseFour4">
                       <h5 class="white-text font-weight-normal mb-0">
                         Can I request refund? <i class="fas fa-angle-down rotate-icon white-text"></i>
@@ -265,7 +265,7 @@
 
                   <!-- Card body -->
                   <div id="collapseFour4" class="collapse" role="tabpanel" aria-labelledby="headingFour4" data-parent="#accordionEx">
-                    <div class="card-body elegant-color white-text">
+                    <div class="card-body teal lighten-3 white-text">
                       Unfortunately, not. We do not issue full or partial refunds for any reason.
                     </div>
                   </div>
@@ -277,7 +277,7 @@
                 <div class="card border-left border-right border-light">
 
                   <!-- Card header -->
-                  <div class="card-header border-bottom z-depth-1 elegant-color border-light" role="tab" id="headingFive5">
+                  <div class="card-header border-bottom z-depth-1 teal lighten-2 border-light" role="tab" id="headingFive5">
                     <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx" href="#collapseFive5" aria-expanded="false" aria-controls="collapseFive5">
                       <h5 class="white-text font-weight-normal mb-0">
                         What payment services do you support? <i class="fas fa-angle-down rotate-icon white-text"></i>
@@ -287,7 +287,7 @@
 
                   <!-- Card body -->
                   <div id="collapseFive5" class="collapse" role="tabpanel" aria-labelledby="headingFive5" data-parent="#accordionEx">
-                    <div class="card-body elegant-color white-text">
+                    <div class="card-body teal lighten-3 white-text">
                       We accept all major credit cards.
                     </div>
                   </div>
@@ -299,7 +299,7 @@
                 <div class="card border-left border-right border-light">
 
                   <!-- Card header -->
-                  <div class="card-header border-bottom z-depth-1 elegant-color border-light" role="tab" id="headingSix6">
+                  <div class="card-header border-bottom z-depth-1 teal lighten-2 border-light" role="tab" id="headingSix6">
                     <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx" href="#collapseSix6" aria-expanded="false" aria-controls="collapseSix6">
                       <h5 class="white-text font-weight-normal mb-0">
                         Can I update my card details? <i class="fas fa-angle-down rotate-icon white-text"></i>
@@ -309,7 +309,7 @@
 
                   <!-- Card body -->
                   <div id="collapseSix6" class="collapse" role="tabpanel" aria-labelledby="headingSix6" data-parent="#accordionEx">
-                    <div class="card-body elegant-color white-text">
+                    <div class="card-body teal lighten-3 white-text">
                       Yes. Go to the billing section of your dashboard and update your payment information.
                     </div>
                   </div>
